--- a/src/components/MdEditor/MdEditor.css
+++ b/src/components/MdEditor/MdEditor.css
@@ -20,35 +20,20 @@
   src: url(https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&display=swap); /* IE9 Compat Modes */
 }
 
-.cyberpunk-md-editor-container {
+.cyberpunk-md-editor {
+  border-bottom: 20px solid var(--yellow-color);
   border-left: 5px solid var(--yellow-color);
   clip-path: polygon(
-    20px 0,
+    22px 0,
     100% 0,
-    100% 0px,
-    100% 100%,
-    15px 100%,
-    14px calc(100% - 14px),
-    0px calc(100% - 15px),
-    0 22px
-  );
-}
-
-.cyberpunk-md-editor {
-  /* border-top: 30px solid var(--yellow-color); */
-  border-bottom: 20px solid var(--yellow-color);
-  /* border-left: 5px solid var(--yellow-color); */
-  /* padding: 0px 0px 0px 20px; */
-  clip-path: polygon(
-    100% 0,
-    100% calc(100% - 12px),
-    75% calc(100% - 12px),
-    calc(75% - 30px) 100%,
-    calc(5% + 20px) 100%,
+    100% calc(100% - 15px),
+    75% calc(100% - 15px),
+    calc(75% - 20px) 100%,
+    calc(5% + 15px) 100%,
     5% calc(100% - 15px),
     0 calc(100% - 15px),
-    0 0,
-    100% 0
+    0% 34%,
+    0 21px
   );
   background-color: #000;
   color: var(--yellow-color);
